--- a/HTML-CSS/week02/main.css
+++ b/HTML-CSS/week02/main.css
@@ -1,1 +1,128 @@
+*, *:after, *:before {
+	margin: 0;
+	padding: 0;
+    line-height: 2rem;
+}
 
+
+h1{
+    text-align: center;
+    color: #accbee;
+    background:#113f67;
+    padding: 2rem ;
+    font-size: 4rem;
+    border-radius: 3rem;
+    margin: 0.5rem;
+   
+}
+h1:hover{
+    background: #accbee ;
+    color: #113f67;
+    padding: 3rem;
+    transition: all 150ms ease-in-out;
+}
+h2{
+    text-align: center;
+    background:  #accbee;
+    color: #005689;
+    padding: 0.8rem;
+    font-size: 3rem;
+    border-radius: 2rem;
+    margin: 0.8rem;
+
+}
+h2:hover{
+    padding: 2rem;
+    color: #accbee;
+    background:#113f67;
+    transition: all 150ms ease-in-out;
+
+}
+h3{
+    
+    background: linear-gradient(to top, #a3bded 10%, #6991c7 100%);
+    padding: 0.4rem;
+    border-radius: 2.5rem 1.2rem;
+    color: #113f67;
+    
+}   
+
+ul{
+    list-style-type: none;
+}
+
+#grid-flex,
+#grid-floats {
+    display: grid;
+    grid-gap: 2rem;
+    margin: 0.5rem;
+  }
+  
+  .grid-item {
+    border: 0.2rem dotted #113f67;
+    padding: 5rem;
+    border-radius: 1rem;
+    text-align: center;
+    box-shadow: 5px 5px 10px rgb(0 0 0 / 30%);
+
+  }
+  
+  .grid-item img {
+    display: block;
+    margin: auto;
+    max-width: 100%;
+  }
+
+  .grid-item:hover{
+    padding: 2rem;
+    border: 0.2rem solid #113f67;
+    transition: all 150ms ease-in-out;
+}
+  
+  /* Media query for mobile phones */
+  @media (min-width: 390px) {
+    #grid-flex,
+    #grid-floats {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap:2rem;
+    }
+    ul li:first-child {
+        grid-column: span 2;
+    }
+  }
+  
+  /* Media query for tablets */
+  @media (min-width:768px) {
+    #grid-flex,
+    #grid-floats {
+      display: grid;
+      grid-template-columns: repeat(6, 1fr);
+      gap:2rem;
+    }
+    .grid-item{
+      grid-column:  span 2;
+    }
+    ul li:first-child {
+        grid-column: span 3;
+    }
+    ul li:nth-child(2){
+        grid-column: span 3;
+    }
+  }
+  
+  /* Media query for desktops */
+  @media (min-width: 1366px) {
+    #grid-flex,
+    #grid-floats {
+      display: grid;
+      grid-template-columns: repeat(12, 1fr);
+      gap:2rem;
+    }
+    .grid-item {
+      grid-column: span 3;
+    }
+    ul li:first-child {
+        grid-column: span 6;
+    }
+  }
