--- a/HTML-CSS/week03/main.css
+++ b/HTML-CSS/week03/main.css
@@ -1,1 +1,443 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: content-box;
+  }
 
+body,html{
+    font-family: 'Playfair Display', serif;
+    height: 100%;
+	width: 100%;
+    font-size: 1rem;
+}
+
+nav ul{
+    padding: 0;
+    margin: 0;
+    
+}
+nav li{
+    display: inline;
+    list-style: none;
+    line-height: 42px;
+    margin-left: 15px;
+}
+nav a{
+ text-decoration: none;
+ color: gray;
+}
+
+a{
+    text-decoration: none;
+    color: black;
+}
+ul, ol{
+    list-style: none;
+}
+ 
+img{
+    width: 100%;
+}
+button{
+    background-color: #6644FF;
+    display: block;
+    margin: 0 auto;
+    color: white;
+    padding: 1rem 3rem;
+    border-style: none;
+    border-radius: 2rem;
+    
+}
+i{
+    width: 3rem;
+    font-size: 2rem;
+    opacity: 50%;
+}
+figure{
+    padding-left: 2rem;
+    
+}
+.first-nav{
+    display: flex;
+    background-color: #F7F8F8;
+    justify-content: space-between;
+    color:black;
+}
+.second-nav{
+    background-color:#FFFFFF;
+    display: flex;
+    justify-content: space-between;
+    padding: 0.5rem;
+   
+}
+.flag{
+    
+    z-index: 1!important;
+    font-size: 1.5rem;
+    margin-left: 0.5rem;
+    width: 1.5rem;
+    margin-top: 0;
+}
+.logo{
+    width: 4.125rem;
+}
+
+
+.navMessage {
+    background-color: #FFDD33;
+    padding: 0.5rem;
+    margin-bottom: 1rem ;
+}
+.important-news{
+    
+    max-width: 100%;
+    margin: 0 auto;
+    padding-top: 6rem;
+    padding-left: 15rem;
+
+}
+.first-grid{
+  display: grid;
+  grid-gap: 0.625rem;
+  height: 31.25rem;
+  width: 100%;
+   
+}
+
+.sensor{
+    background-image: linear-gradient(
+        rgba(0, 0, 0, 0.5),
+        rgba(0, 0, 0, 0.5)
+      ),  url("../img/sensor.jpeg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    color:white;
+    width: 100%;
+    text-align: center;
+  
+}
+.drones{
+    background-image: linear-gradient(
+        rgba(0, 0, 0, 0.5),
+        rgba(0, 0, 0, 0.5)
+      ),  url("../img/drones.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    color:white;
+    text-align: center;
+    
+}
+.join{
+    background-image: linear-gradient(
+        rgba(0, 0, 0, 0.5),
+        rgba(0, 0, 0, 0.5)
+      ),  url("../img/join.webp");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    color:white;
+    text-align: center;
+  
+    
+}
+.ukraine{
+    background-image: linear-gradient(
+        rgba(0, 0, 0, 0.5),
+        rgba(0, 0, 0, 0.5)
+      ),  url("../img/ukrain.jpeg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    color:white;
+    text-align: center;
+    
+}
+.valencia{
+    background-image: linear-gradient(
+        rgba(0, 0, 0, 0.5),
+        rgba(0, 0, 0, 0.5)
+      ),  url("../img/valencia.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    color:white;
+    text-align: center;
+   
+}
+.joinBtn{
+    background-color: transparent;
+    border: 1px solid #FFFFFF;
+    display: block;
+    color: white;
+    padding: 1rem 1rem;
+    border-radius: 2rem;
+    text-align: left;
+
+}
+.description{
+padding: 1rem;
+text-align: left;
+text-align: bottom;
+}
+
+.popular{
+    text-align: center;
+    font-size: 2rem;
+}
+.popular-story{
+  
+    max-width: 100%;
+    margin: 0 auto;
+    padding: 6.25rem;
+}
+.index{
+    position: absolute;
+    bottom: 6rem;
+    font-family: Shentox;
+    color: #7b5aa7;
+    font-size: 3rem;
+}
+
+
+.second-grid{
+    display: grid;
+    gap: 0.5rem;
+    padding: 1rem;
+  
+}
+.listItem{
+    padding: 1rem;
+    position: relative;
+}
+.second-img{
+   
+   
+   clip-path: polygon(0 0,100% 0,100% 50%,100% 100%,21% 100%,0 61%);
+}
+   
+
+.latest-news{
+    max-width: 100%;
+    margin: 0 auto;
+    padding: 9rem;
+}
+.latest{
+ text-align: left;
+ font-size: 2rem;
+}
+
+.third-grid{
+    display: grid;
+    
+}
+
+.newsletter {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #6644FF;
+    margin-top: 5rem;
+    margin-bottom: 5rem;
+  }
+  
+  .mail {
+    text-align: center;
+    line-height: 2;
+  }
+  
+  .icon{
+    margin-top: 1rem;
+    margin-bottom: 3rem;
+    
+  }
+  .btn{
+
+    background-color:#6644FF;
+    border: none;
+    color: white;
+    padding: 0.5rem 1rem;
+    border-style: none;
+    
+   
+  }
+  .email{
+    background-color: #6644FF;
+    border-style: none;
+    padding: 0.5rem 8rem;
+    color:white;
+   
+  }
+  .form-email{
+    border: 1px solid white;
+    border-radius: 0.2rem;
+
+  }
+  
+  .showcase, .video, .getInTouch{
+    max-width: 100%;
+    margin: 0 auto;
+    padding: 15rem ;
+    border-top: solid 0.1rem rgb(172, 171, 171)
+  }
+  
+  .video{
+
+    background-color: #F6F8F8;
+  }
+.showcaseSubbrandsList, .videoList{
+    display: flex;
+    justify-content:flex-start;
+}
+
+.showcaseSubbrandsArtical, .videoArtical{
+    max-width: 45rem;
+}
+
+ 
+ .listArticle, .getInTouchIcon {
+    display: flex;
+  }
+  
+  .listArticleDescription, .getInTouchIcon {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-left: 20px;
+  }
+  
+  .listArticle  p {
+    flex-grow: 1;
+    margin: 0.4rem 0 0 0;
+    font-size: 1rem;
+    font-weight: bold;
+  }
+.technology-img{
+    max-width: 10rem;
+}
+.youtube{
+
+    margin-top: 0.3rem;
+}
+.getInTouchButton{
+    background-color: #6644FF;
+    display: block;
+    margin: 0 auto;
+    color: white;
+    padding: 1rem 3rem;
+    border-style: none;
+    border-radius: 0.5rem;
+}
+.getInTouchIcon img{
+    width: 8rem;
+}
+.fourth-grid{
+    background-color: black;
+    color: #FFFFFF;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    padding-top: 2rem;
+  }
+ .footer-copyright{
+    text-align: center;
+    border-top: solid 0.1rem rgb(172, 171, 171);
+    grid-column: 1/9;
+    grid-row: 3/span 2;
+    padding: 2rem;
+
+ }
+
+ .socialLogo{
+    width: 10rem;
+   
+ }
+ .social-media{
+    grid-column: 1/5;
+    grid-row: 1/span 2;
+    padding: 3rem;
+
+ }
+ .more{
+    grid-column: 2/5;
+    grid-row: 1/span 2;
+    padding: 3rem;
+ }
+ .about{
+    grid-column: 3/5;
+    grid-row: 1/span 2;
+    padding: 3rem;
+ }
+.getInTouchIcon{
+ display: grid;
+ grid-template-columns: repeat(2, 1fr);
+ grid-template-rows: repeat(2, 1fr);  
+}
+ 
+
+
+@media (min-width: 800px) {
+    
+    
+    .first-grid {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+     }
+    .second-grid{
+        display: grid;
+        grid-template-columns: 1fr  ;
+    }
+    .third-grid{
+        display: grid;
+        grid-template-columns: 1fr  ;
+    }
+    .video{
+        display: grid;
+        grid-template-columns: 1fr  ;
+
+    }
+  }
+    
+
+  @media (min-width: 1200px) {
+    .first-grid { 
+        display: grid;
+        grid-template-columns: repeat(auto-fill, 160px);
+     }
+    
+    .sensor { 
+      grid-column: 1/5;
+      grid-row: 1/ span 3
+    }
+    .drones { 
+         grid-column: 5/7;
+         grid-row: 1/ span 2; 
+          }
+  
+      .join{ 
+          grid-column: 1/5;
+          grid-row: 4/ span 2;
+      }
+  
+      .ukraine{
+          grid-column: 7/9;
+          grid-row: 1/ span 2;
+      }
+  
+      .valencia{ 
+          grid-column: 5/9; 
+          grid-row: 3/ span 6;
+      }
+      .second-grid{
+        display: grid;
+        grid-template-columns: repeat(5, 1fr) ;
+    }
+    .third-grid{
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+    }
+  }
+  
