--- a/HTML-CSS/week03/main.css
+++ b/HTML-CSS/week03/main.css
@@ -108,7 +108,7 @@ figure{
     background-image: linear-gradient(
         rgba(0, 0, 0, 0.5),
         rgba(0, 0, 0, 0.5)
-      ),  url("../img/sensor.jpeg");
+      ),  url("img/sensor.jpeg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -121,7 +121,7 @@ figure{
     background-image: linear-gradient(
         rgba(0, 0, 0, 0.5),
         rgba(0, 0, 0, 0.5)
-      ),  url("../img/drones.jpg");
+      ),  url("img/drones.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -133,7 +133,7 @@ figure{
     background-image: linear-gradient(
         rgba(0, 0, 0, 0.5),
         rgba(0, 0, 0, 0.5)
-      ),  url("../img/join.webp");
+      ),  url("img/join.webp");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -146,7 +146,7 @@ figure{
     background-image: linear-gradient(
         rgba(0, 0, 0, 0.5),
         rgba(0, 0, 0, 0.5)
-      ),  url("../img/ukrain.jpeg");
+      ),  url("img/ukrain.jpeg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -158,7 +158,7 @@ figure{
     background-image: linear-gradient(
         rgba(0, 0, 0, 0.5),
         rgba(0, 0, 0, 0.5)
-      ),  url("../img/valencia.jpg");
+      ),  url("img/valencia.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
