--- a/HTML-CSS/week03/main.css
+++ b/HTML-CSS/week03/main.css
@@ -133,7 +133,7 @@ figure{
     background-image: linear-gradient(
         rgba(0, 0, 0, 0.5),
         rgba(0, 0, 0, 0.5)
-      ),  url("img/join.webp");
+      ),  url("..img/join.webp");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
