--- a/HTML-CSS/week03/main.css
+++ b/HTML-CSS/week03/main.css
@@ -1,443 +1,798 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: content-box;
-  }
-
-body,html{
-    font-family: 'Playfair Display', serif;
-    height: 100%;
-	width: 100%;
-    font-size: 1rem;
+*, *:after, *:before{
+margin: 0;
+padding: 0;
+box-sizing: border-box;
 }
+
+body{
+font-family: 'Playfair Display', serif;
+font-size: 1rem;
+}
+
+/*------------ Small screen ------------*/
 
 nav ul{
-    padding: 0;
-    margin: 0;
-    
+padding: 0;
+margin: 0;
+
 }
 nav li{
-    display: inline;
-    list-style: none;
-    line-height: 42px;
-    margin-left: 15px;
+display: inline;
+list-style: none;
+line-height: 42px;
+margin-left: 15px;
 }
 nav a{
- text-decoration: none;
- color: gray;
+text-decoration: none;
+color: gray;
 }
 
 a{
-    text-decoration: none;
-    color: black;
+text-decoration: none;
+color: black;
 }
 ul, ol{
-    list-style: none;
+list-style: none;
 }
- 
+
 img{
-    width: 100%;
+width: 100%;
 }
 button{
-    background-color: #6644FF;
-    display: block;
-    margin: 0 auto;
-    color: white;
-    padding: 1rem 3rem;
-    border-style: none;
-    border-radius: 2rem;
-    
+background-color: #6644FF;
+display: block;
+margin: 0 auto;
+color: white;
+padding: 1rem 3rem;
+border-style: none;
+border-radius: 2rem;
+
 }
 i{
-    width: 3rem;
-    font-size: 2rem;
-    opacity: 50%;
+width: 3rem;
+font-size: 2rem;
+opacity: 50%;
 }
 figure{
-    padding-left: 2rem;
-    
+padding-left: 1rem;
+
+}
+h6{
+color: gray;
+text-transform: uppercase;
 }
 .first-nav{
-    display: flex;
-    background-color: #F7F8F8;
-    justify-content: space-between;
-    color:black;
+display: flex;
+background-color: #F7F8F8;
+justify-content: space-between;
+color:black;
 }
 .second-nav{
-    background-color:#FFFFFF;
-    display: flex;
-    justify-content: space-between;
-    padding: 0.5rem;
-   
+background-color:#FFFFFF;
+display: flex;
+justify-content: space-between;
+padding: 0.5rem;
+
 }
 .flag{
-    
-    z-index: 1!important;
-    font-size: 1.5rem;
-    margin-left: 0.5rem;
-    width: 1.5rem;
-    margin-top: 0;
+
+z-index: 1!important;
+font-size: 1.5rem;
+margin-left: 0.5rem;
+width: 1.5rem;
+margin-top: 0;
 }
 .logo{
-    width: 4.125rem;
+width: 4.125rem;
 }
-
 
 .navMessage {
-    background-color: #FFDD33;
-    padding: 0.5rem;
-    margin-bottom: 1rem ;
+background-color: #FFDD33;
+padding: 0.5rem;
+margin-bottom: 1rem ;
 }
-.important-news{
-    
-    max-width: 100%;
-    margin: 0 auto;
-    padding-top: 6rem;
-    padding-left: 15rem;
 
-}
 .first-grid{
-  display: grid;
-  grid-gap: 0.625rem;
-  height: 31.25rem;
-  width: 100%;
-   
-}
+display: grid;
+grid-template-columns: 1fr;
+gap:0.5rem;
+max-width: 100%;
 
+}
 .sensor{
-    background-image: linear-gradient(
-        rgba(0, 0, 0, 0.5),
-        rgba(0, 0, 0, 0.5)
-      ),  url("img/sensor.jpeg");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    color:white;
-    width: 100%;
-    text-align: center;
-  
+background-image: linear-gradient(
+rgba(0, 0, 0, 0.5),
+rgba(0, 0, 0, 0.5)
+), url("../img/sensor.jpeg");
+background-size: cover;
+background-position: center;
+background-repeat: no-repeat;
+color:white;
+width: 100%;
+text-align: center;
+position: relative;
+
 }
 .drones{
-    background-image: linear-gradient(
-        rgba(0, 0, 0, 0.5),
-        rgba(0, 0, 0, 0.5)
-      ),  url("img/drones.jpg");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    color:white;
-    text-align: center;
-    
+background-image: linear-gradient(
+rgba(0, 0, 0, 0.5),
+rgba(0, 0, 0, 0.5)
+), url("../img/drones.jpg");
+background-size: cover;
+background-position: center;
+background-repeat: no-repeat;
+color:white;
+text-align: center;
+position: relative;
+
 }
 .join{
-    background-image: linear-gradient(
-        rgba(0, 0, 0, 0.5),
-        rgba(0, 0, 0, 0.5)
-      ),  url("img/join.webp");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    color:white;
-    text-align: center;
-  
-    
+background-image: linear-gradient(
+rgba(0, 0, 0, 0.5),
+rgba(0, 0, 0, 0.5)
+), url("../img/join.webp");
+background-size: cover;
+background-position: center;
+background-repeat: no-repeat;
+color:white;
+text-align: center;
+position: relative;
+
 }
 .ukraine{
-    background-image: linear-gradient(
-        rgba(0, 0, 0, 0.5),
-        rgba(0, 0, 0, 0.5)
-      ),  url("img/ukrain.jpeg");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    color:white;
-    text-align: center;
-    
+background-image: linear-gradient(
+rgba(0, 0, 0, 0.5),
+rgba(0, 0, 0, 0.5)
+), url("../img/ukrain.jpeg");
+background-size: cover;
+background-position: center;
+background-repeat: no-repeat;
+color:white;
+text-align: center;
+
+position: relative;
+
 }
 .valencia{
-    background-image: linear-gradient(
-        rgba(0, 0, 0, 0.5),
-        rgba(0, 0, 0, 0.5)
-      ),  url("img/valencia.jpg");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    color:white;
-    text-align: center;
-   
+background-image: linear-gradient(
+rgba(0, 0, 0, 0.5),
+rgba(0, 0, 0, 0.5)
+), url("../img/valencia.jpg");
+background-size: cover;
+background-position: center;
+background-repeat: no-repeat;
+color:white;
+text-align: center;
+position: relative;
+
 }
 .joinBtn{
-    background-color: transparent;
-    border: 1px solid #FFFFFF;
-    display: block;
-    color: white;
-    padding: 1rem 1rem;
-    border-radius: 2rem;
-    text-align: left;
+background-color: transparent;
+border: 1px solid #FFFFFF;
+display: block;
+color: white;
+padding: 1rem 1rem;
+border-radius: 2rem;
 
 }
-.description{
-padding: 1rem;
-text-align: left;
-text-align: bottom;
-}
 
-.popular{
-    text-align: center;
-    font-size: 2rem;
-}
-.popular-story{
-  
-    max-width: 100%;
-    margin: 0 auto;
-    padding: 6.25rem;
-}
 .index{
-    position: absolute;
-    bottom: 6rem;
-    font-family: Shentox;
-    color: #7b5aa7;
-    font-size: 3rem;
+position: absolute;
+bottom: 5rem;
+font-family: Shentox;
+color: #7b5aa7;
+font-size: 2rem;
 }
-
-
 .second-grid{
-    display: grid;
-    gap: 0.5rem;
-    padding: 1rem;
-  
+display:grid;
+grid-template-columns: 1fr 1fr;
 }
 .listItem{
-    padding: 1rem;
-    position: relative;
+padding: 1rem;
+position: relative;
 }
 .second-img{
-   
-   
-   clip-path: polygon(0 0,100% 0,100% 50%,100% 100%,21% 100%,0 61%);
+
+clip-path: polygon(0 0,100% 0,100% 50%,100% 100%,21% 100%,0 61%);
 }
-   
+.title{
+color: gray;
+}
 
 .latest-news{
-    max-width: 100%;
-    margin: 0 auto;
-    padding: 9rem;
+max-width: 100%;
+margin: 0 auto;
+padding: 9rem;
 }
 .latest{
- text-align: left;
- font-size: 2rem;
-}
-
-.third-grid{
-    display: grid;
-    
+text-align: left;
+font-size: 2rem;
 }
 
 .newsletter {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: #6644FF;
-    margin-top: 5rem;
-    margin-bottom: 5rem;
-  }
-  
-  .mail {
-    text-align: center;
-    line-height: 2;
-  }
-  
-  .icon{
-    margin-top: 1rem;
-    margin-bottom: 3rem;
-    
-  }
-  .btn{
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+background-color: #6644FF;
+margin-top: 5rem;
+margin-bottom: 5rem;
+}
 
-    background-color:#6644FF;
-    border: none;
-    color: white;
-    padding: 0.5rem 1rem;
-    border-style: none;
-    
-   
-  }
-  .email{
-    background-color: #6644FF;
-    border-style: none;
-    padding: 0.5rem 8rem;
-    color:white;
-   
-  }
-  .form-email{
-    border: 1px solid white;
-    border-radius: 0.2rem;
+.mail {
+text-align: center;
+line-height: 2;
+}
 
-  }
-  
-  .showcase, .video, .getInTouch{
-    max-width: 100%;
-    margin: 0 auto;
-    padding: 15rem ;
-    border-top: solid 0.1rem rgb(172, 171, 171)
-  }
-  
-  .video{
+.icon{
+margin-top: 1rem;
+margin-bottom: 3rem;
+color: rgb(141, 115, 255);
 
-    background-color: #F6F8F8;
-  }
+}
+.btn{
+
+background-color:rgb(141, 115, 255);
+border: none;
+color: white;
+padding: 0.5rem 1rem;
+border-style: none;
+
+}
+.email{
+background-color: rgb(141, 115, 255);
+border-style: none;
+padding: 0.5rem 8rem;
+color:white;
+
+}
+.partners{
+display: flex;
+flex-direction: column;
+size: 50px;
+margin: auto;
+padding: 2rem;
+
+}
+
+.showcase, .video{
+max-width: 100%;
+margin: 0 auto;
+padding: 5rem ;
+border-top: solid 0.1rem rgb(172, 171, 171)
+}
+.video, .contentList{
+display: grid;
+grid-template-columns: 1fr ;
+
+}
 .showcaseSubbrandsList, .videoList{
-    display: flex;
-    justify-content:flex-start;
+display: flex;
+justify-content:flex-start;
 }
 
 .showcaseSubbrandsArtical, .videoArtical{
-    max-width: 45rem;
+max-width: 45rem;
 }
 
- 
- .listArticle, .getInTouchIcon {
-    display: flex;
-  }
-  
-  .listArticleDescription, .getInTouchIcon {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    margin-left: 20px;
-  }
-  
-  .listArticle  p {
-    flex-grow: 1;
-    margin: 0.4rem 0 0 0;
-    font-size: 1rem;
-    font-weight: bold;
-  }
+.listArticle {
+display: flex;
+margin-left: 1rem;
+}
+.getInTouchIcon{
+display: flex;
+width: 50%;
+margin:auto;
+flex-direction: row;
+justify-content: space-between;
+flex-wrap: wrap;
+align-content: center;
+list-style-type: none;
+gap: 4rem;
+}
+.getInTouchIcon img{
+width: 8rem;
+}
+
+.getInTouchButton{
+background-color: #6644FF;
+display: block;
+margin: 1rem auto;
+color: white;
+padding: 1rem 3rem;
+border-style: none;
+border-radius: 0.5rem;
+}
+
+.listArticleDescription {
+display: flex;
+flex-direction: column;
+justify-content: space-between;
+margin-left: 20px;
+}
+
+.listArticle p {
+flex-grow: 1;
+margin: 0.4rem 0 0 0;
+font-size: 1rem;
+font-weight: bold;
+}
 .technology-img{
-    max-width: 10rem;
+max-width: 10rem;
 }
 .youtube{
 
-    margin-top: 0.3rem;
+margin-top: 0.3rem;
+}
+
+.fourth-grid{
+background-color: black;
+color: #FFFFFF;
+display: grid;
+grid-template-columns: repeat(2, 1fr);
+grid-template-rows: repeat(2, 1fr);
+padding-top: 2rem;
+}
+.footer-copyright{
+text-align: center;
+border-top: solid 0.1rem rgb(172, 171, 171);
+grid-column: 1/9;
+grid-row: 3/span 2;
+padding: 2rem;
+
+}
+
+.socialLogo{
+width: 5rem;
+padding: 0;
+
+}
+.social-media{
+grid-column: 1/5;
+grid-row: 1/span 2;
+padding: 3rem;
+width: 5rem;
+
+}
+.more{
+grid-column: 2/5;
+grid-row: 1/span 2;
+padding: 2rem;
+width: 5rem;
+}
+.about{
+grid-column: 3/5;
+grid-row: 1/span 2;
+padding: 0.1rem;
+width: 5rem;
+}
+.getInTouchIcon{
+display: grid;
+grid-template-columns: repeat(2, 1fr);
+grid-template-rows: repeat(2, 1fr);
+}
+.about li{
+color:rgb(91, 194, 208);
+}
+.more li{
+color:rgb(91, 194, 208);
+}
+
+/*------------ Big screen ------------*/
+
+@media (min-width: 1200px) {
+
+nav ul{
+padding: 0;
+margin: 0;
+
+}
+nav li{
+display: inline;
+list-style: none;
+line-height: 42px;
+margin-left: 15px;
+}
+nav a{
+text-decoration: none;
+color: gray;
+}
+
+a{
+text-decoration: none;
+color: black;
+}
+ul, ol{
+list-style: none;
+}
+
+img{
+width: 100%;
+}
+button{
+background-color: #6644FF;
+display: block;
+margin: 0 auto;
+color: white;
+padding: 1rem 3rem;
+border-style: none;
+border-radius: 2rem;
+
+}
+i{
+width: 3rem;
+font-size: 2rem;
+opacity: 50%;
+}
+figure{
+padding-left: 2rem;
+
+}
+h6{
+color: gray;
+text-transform: uppercase;
+}
+.first-nav{
+display: flex;
+background-color: #F7F8F8;
+justify-content: space-between;
+color:black;
+}
+.second-nav{
+background-color:#FFFFFF;
+display: flex;
+justify-content: space-between;
+padding: 0.5rem;
+
+}
+.flag{
+
+z-index: 1!important;
+font-size: 1.5rem;
+margin-left: 0.5rem;
+width: 1.5rem;
+margin-top: 0;
+}
+.logo{
+width: 4.125rem;
+}
+
+.navMessage {
+background-color: #FFDD33;
+padding: 0.5rem;
+margin-bottom: 1rem ;
+}
+
+.first-grid{
+display: grid;
+grid-template-columns: repeat(8, 1fr);
+grid-template-rows: repeat(4, 1fr);
+width: 100%;
+height: 42rem;
+gap:0.5rem;
+padding: 1rem 6rem 1rem 6rem;
+
+}
+
+.sensor{
+background-image: linear-gradient(
+rgba(0, 0, 0, 0.5),
+rgba(0, 0, 0, 0.5)
+), url("../img/sensor.jpeg");
+background-size: cover;
+background-position: center;
+background-repeat: no-repeat;
+color:white;
+width: 100%;
+text-align: center;
+grid-column: 1/5;
+grid-row: 1/ span 3;
+position: relative;
+
+}
+.drones{
+background-image: linear-gradient(
+rgba(0, 0, 0, 0.5),
+rgba(0, 0, 0, 0.5)
+), url("../img/drones.jpg");
+background-size: cover;
+background-position: center;
+background-repeat: no-repeat;
+color:white;
+text-align: center;
+grid-column: 5/7;
+grid-row: 1/ span 2;
+position: relative;
+
+}
+.join{
+background-image: linear-gradient(
+rgba(0, 0, 0, 0.5),
+rgba(0, 0, 0, 0.5)
+), url("../img/join.webp");
+background-size: cover;
+background-position: center;
+background-repeat: no-repeat;
+color:white;
+text-align: center;
+grid-column: 1/5;
+grid-row: 4/ 9;
+position: relative;
+
+}
+.ukraine{
+background-image: linear-gradient(
+rgba(0, 0, 0, 0.5),
+rgba(0, 0, 0, 0.5)
+), url("../img/ukrain.jpeg");
+background-size: cover;
+background-position: center;
+background-repeat: no-repeat;
+color:white;
+text-align: center;
+grid-column: 7/9;
+grid-row: 1/ span 2;
+position: relative;
+
+}
+.valencia{
+background-image: linear-gradient(
+rgba(0, 0, 0, 0.5),
+rgba(0, 0, 0, 0.5)
+), url("../img/valencia.jpg");
+background-size: cover;
+background-position: center;
+background-repeat: no-repeat;
+color:white;
+text-align: center;
+grid-column: 5/9;
+grid-row: 3/ span 6;
+position: relative;
+
+}
+.joinBtn{
+background-color: transparent;
+border: 1px solid #FFFFFF;
+display: block;
+color: white;
+padding: 1rem 1rem;
+border-radius: 2rem;
+
+}
+.topic-news{
+
+text-align: left;
+position: absolute;
+bottom: 0.5rem;
+left: 0.5rem;
+
+}
+
+.popular{
+text-align: center;
+font-size: 2rem;
+}
+.popular-story{
+
+max-width: 100%;
+margin: 0 auto;
+padding: 6rem;
+}
+.index{
+position: absolute;
+bottom: 5rem;
+font-family: Shentox;
+color: #7b5aa7;
+font-size: 3rem;
+}
+
+.second-grid{
+display: grid;
+grid-template-columns: repeat(5, 1fr) ;
+gap: 0.5rem;
+padding: 1rem;
+
+}
+.listItem{
+padding: 1rem;
+position: relative;
+}
+.second-img{
+
+clip-path: polygon(0 0,100% 0,100% 50%,100% 100%,21% 100%,0 61%);
+}
+.title{
+color: gray;
+}
+
+.latest-news{
+max-width: 100%;
+margin: 0 auto;
+padding: 9rem;
+}
+.latest{
+text-align: left;
+font-size: 2rem;
+}
+
+.third-grid{
+display: grid;
+grid-template-columns: repeat(4, 1fr);
+grid-template-rows: repeat(3, 1fr);
+
+}
+
+.newsletter {
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+background-color: #6644FF;
+margin-top: 5rem;
+margin-bottom: 5rem;
+}
+
+.mail {
+text-align: center;
+line-height: 2;
+}
+
+.icon{
+margin-top: 1rem;
+margin-bottom: 3rem;
+color: rgb(141, 115, 255);
+
+}
+.btn{
+
+background-color:rgb(141, 115, 255);
+border: none;
+color: white;
+padding: 0.5rem 1rem;
+border-style: none;
+
+}
+.email{
+background-color: rgb(141, 115, 255);
+border-style: none;
+padding: 0.5rem 8rem;
+color:white;
+
+}
+
+.video{
+
+background-color: #F6F8F8;
+}
+
+.listArticle {
+display: flex;
+}
+.getInTouch{
+display: flex;
+flex-direction: row;
+justify-content: space-between;
+margin: auto;
+padding: 2rem 1rem 2rem 1rem;
+width: 100%;
+}
+.getInTouchIcon{
+display: flex;
+flex-direction: row;
+align-items: center;
+width: 35%;
+gap: 0.5rem;
+}
+.showcase {
+display: flex;
+flex-direction: row;
+justify-content: space-between;
+margin: auto;
+padding: 2rem 1rem 2rem 1rem;
+width: 60%;
+}
+.showcaseHeader{
+padding-bottom: 1rem;
+}
+
+.listArticleDescription {
+display: flex;
+flex-direction: column;
+justify-content: space-between;
+margin-left: 20px;
+}
+
+.listArticle p {
+flex-grow: 1;
+margin: 0.4rem 0 0 0;
+font-size: 1rem;
+font-weight: bold;
+}
+.technology-img{
+max-width: 10rem;
+}
+.youtube{
+
+margin-top: 0.3rem;
+}
+.getInTouch, .showcase, .video {
+display: flex;
+flex-direction: row;
+justify-content: space-between;
+margin: auto;
+padding: 2rem 1rem 2rem 1rem;
+width: 60%;
+}
+.getInTouchArtical, .videoArtical{
+width:50%;
+
 }
 .getInTouchButton{
-    background-color: #6644FF;
-    display: block;
-    margin: 0 auto;
-    color: white;
-    padding: 1rem 3rem;
-    border-style: none;
-    border-radius: 0.5rem;
+background-color: #6644FF;
+display: block;
+margin: 1rem auto;
+color: white;
+padding: 1rem 3rem;
+border-style: none;
+border-radius: 0.5rem;
 }
 .getInTouchIcon img{
-    width: 8rem;
+width: 5rem;
+}
+.partners{
+display: flex;
+flex-direction: row;
+justify-content:space-around;
+margin: auto;
+padding: 2rem;
+
+}
+.partners img{
+width: 7rem;
 }
 .fourth-grid{
-    background-color: black;
-    color: #FFFFFF;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    padding-top: 2rem;
-  }
- .footer-copyright{
-    text-align: center;
-    border-top: solid 0.1rem rgb(172, 171, 171);
-    grid-column: 1/9;
-    grid-row: 3/span 2;
-    padding: 2rem;
-
- }
-
- .socialLogo{
-    width: 10rem;
-   
- }
- .social-media{
-    grid-column: 1/5;
-    grid-row: 1/span 2;
-    padding: 3rem;
-
- }
- .more{
-    grid-column: 2/5;
-    grid-row: 1/span 2;
-    padding: 3rem;
- }
- .about{
-    grid-column: 3/5;
-    grid-row: 1/span 2;
-    padding: 3rem;
- }
-.getInTouchIcon{
- display: grid;
- grid-template-columns: repeat(2, 1fr);
- grid-template-rows: repeat(2, 1fr);  
+background-color: black;
+color: #FFFFFF;
+display: grid;
+grid-template-columns: repeat(2, 1fr);
+grid-template-rows: repeat(2, 1fr);
+padding-top: 2rem;
 }
- 
+.footer-copyright{
+text-align: center;
+border-top: solid 0.1rem rgb(172, 171, 171);
+grid-column: 1/9;
+grid-row: 3/span 2;
+padding: 2rem;
 
+}
 
-@media (min-width: 800px) {
-    
-    
-    .first-grid {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-     }
-    .second-grid{
-        display: grid;
-        grid-template-columns: 1fr  ;
-    }
-    .third-grid{
-        display: grid;
-        grid-template-columns: 1fr  ;
-    }
-    .video{
-        display: grid;
-        grid-template-columns: 1fr  ;
+.socialLogo{
+width: 10rem;
 
-    }
-  }
-    
+}
+.social-media{
+grid-column: 1/5;
+grid-row: 1/span 2;
+padding: 3rem;
 
-  @media (min-width: 1200px) {
-    .first-grid { 
-        display: grid;
-        grid-template-columns: repeat(auto-fill, 160px);
-     }
-    
-    .sensor { 
-      grid-column: 1/5;
-      grid-row: 1/ span 3
-    }
-    .drones { 
-         grid-column: 5/7;
-         grid-row: 1/ span 2; 
-          }
-  
-      .join{ 
-          grid-column: 1/5;
-          grid-row: 4/ span 2;
-      }
-  
-      .ukraine{
-          grid-column: 7/9;
-          grid-row: 1/ span 2;
-      }
-  
-      .valencia{ 
-          grid-column: 5/9; 
-          grid-row: 3/ span 6;
-      }
-      .second-grid{
-        display: grid;
-        grid-template-columns: repeat(5, 1fr) ;
-    }
-    .third-grid{
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        grid-template-rows: repeat(3, 1fr);
-    }
-  }
+}
+.more{
+grid-column: 2/5;
+grid-row: 1/span 2;
+padding: 3rem;
+}
+.more li{
+color:rgb(91, 194, 208);
+}
+.about{
+grid-column: 3/5;
+grid-row: 1/span 2;
+padding: 3rem;
+}
+.about li{
+color:rgb(91, 194, 208);
+}
+
+}
   
