--- a/HTML-CSS/week03/main.css
+++ b/HTML-CSS/week03/main.css
@@ -702,6 +702,7 @@
     .youtube{
     
     margin-top: 0.3rem;
+    margin-left: 1rem;
     }
     .getInTouch, .showcase, .video {
     display: flex;
